# pca-variance-filtering

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: build_metadata.py  cumulative_variance_plot.py  pca_loadings.py  pca_with_metadata.py  variance_gain.py
outputs/matrices/: pca_coordinates.csv  pca_coordinates_no_filter.csv  pca_explained_variance.csv  pca_explained_variance_no_filter.csv  pca_loadings.csv  pca_loadings_no_filter.csv  top_20_genes_pc1_loadings_comparison.csv
